# azure-rm-proxy-server

./: .flake8  .gitignore  .releaserc.json  Audit.md  CHANGELOG.md  Caching.md  Development.md  Dockerfile  GitFlow.md  Improvements.md  Makefile  README.md  SonarQube-Fixes-Report.md  dev-compose.yml  docker-compose.yml  mypy.ini  openapi.json  openapi.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  publish.yml  release.yml
azure_rm_client/: README.md  client.py  cmd.py  create_module_structure.py  formatter.py  requirements.txt  worker.py  workersssss.py
azure_rm_client/commands/: __init__.py  base_command.py  fetch_azurermapi_command.py  get_all.py  list_resources_command.py  register_commands.py  resource_command.py  resource_group_command.py  resource_group_commands.py  resource_groups_command.py  route_tables_command.py  subscriptions_command.py  virtual_machines.py  virtual_machines_command.py  vm_connectivity_command.py  vm_hostnames_command.py  vm_reports_command.py  vm_shortcuts_command.py  vnet_peering_report_command.py
azure_rm_client/core/: auth.py
azure_rm_client/formatters/: __init__.py  formatter_interface.py  json_formatter.py  markdown_formatter.py  mediawiki_formatter.py  rich_formatter.py  table_formatter.py  text_formatter.py  yaml_formatter.py
azure_rm_client/tests/: base_worker_test.py  create_test_fixtures.py  test_azurerm_api_worker.py  test_cmd_subcommands.py  test_command_registry.py  test_resource_groups_worker.py  test_route_tables_worker.py  test_subscriptions_worker.py  test_virtual_machines_worker.py  test_vm_hostnames_worker.py  test_vm_reports_worker.py  test_vm_shortcuts_worker.py  test_worker_base.py
azure_rm_client/workers/: __init__.py  azurerm_api_worker.py  get_all_worker.py  resource_groups_worker.py  route_tables_worker.py  subscriptions_worker.py  virtual_machines_worker.py  vm_hostnames_worker.py  vm_reports_worker.py  vm_shortcuts_worker.py  worker_base.py  worker_factory.py
azure_rm_mcp_server/: Improvements.md  README.md  __init__.py  context.txt  main.py  subscriptions_tool.py  tools.py
azure_rm_network_tool/: README.md  __init__.py  vm_connectivity.py
azure_rm_proxy/: __init__.py
azure_rm_proxy/api/: resource_groups.py  root.py  (+8 more)
tools/: run_with_redis.sh  test_redis_cache.py
(+63 files in other folders)
